# path-comment

./: .gitignore  Cargo.toml  README.md
src/: args.rs  cli.rs  comments.cfg  comments.rs  ignore.cfg  main.rs  test.rs
