[package]
name = "path-comment"
version = "0.1.0"
edition = "2024"



[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.8"
ignore = "0.4.23"
lazy_static = "1.5.0"
log = "0.4.27"
once_cell = "1.21.3"
pathdiff = "0.2.3"
regex = "1.11.1"
tempfile = "3.19.1"
thiserror = "2.0.12"
