[package]
name = "path-comment"
version = "0.1.0"
edition = "2024"
authors = ["nobane"]
description = "CLI tool to prepend file paths as comments to source code files"
license = "MIT"


[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
ignore = "0.4.23"
once_cell = "1.21.3"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.19.1"
